# ml_fraud_detection

./: .env  .env.test  PROJECT_PLAN.md  README.md  mlflow.duckdb  pyproject.toml
scripts/: mlflow.duckdb  start_mlflow_duckdb.sh  test_mlflow_setup.py
src/utils/: mlflow_analytics.py  mlflow_duckdb_setup.py
